--- a/_posts/2020-01-02-the-us-narrative-today.html
+++ b/_posts/2020-01-02-the-us-narrative-today.html
@@ -1829,107 +1829,107 @@ stories:
   domain: http://www.cascadebusnews.com/
   link: http://cascadebusnews.com/medicare-advantage-plans-expand-eligibility-for-fitness-at-bend-park-and-rec-district/
 images:
-- name: braceros-domingo-ulloa-stairs-down-blue-green.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-stairs-down-blue-green.jpg
-- name: server-cloud-server-racks-door-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-aqua.jpg
-- name: rain-princess-adam-smith-edinburgh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-adam-smith-edinburgh.jpg
-- name: nazi-invasion-graffitti-red-hat-man.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-graffitti-red-hat-man.jpg
-- name: nazi-invasion-seatlle-shipping-mountain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-seatlle-shipping-mountain.jpg
-- name: birdhouse-birdhouse-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-blue-circuit.jpg
-- name: mistywoods-babyfoot-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-diego-rivera1.jpg
-- name: liberty-back-statue-liberty-back-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-gan-vogh.jpg
-- name: la-muse-border-watching-cars.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-border-watching-cars.jpg
-- name: oldtrain-oldtrain-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-dali-two.jpg
-- name: store-on-corner-oldcabin-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-dry-skin.jpg
-- name: oldhouse-oldhouse-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-attack-planes.jpg
-- name: windowmountain-window-mountain-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-gred-mash.jpg
-- name: stalin-time-satellite-dish-pointing-upwards.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-satellite-dish-pointing-upwards.jpg
-- name: downtown-trucksilo-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-blue-electricity.jpg
-- name: old-granary-field-granaryfield-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-mucha-mult.jpg
-- name: stories-gears-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-gears-smoking-cigarette.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-space-pizza.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-space-pizza.png
-- name: nyc-flag-nycflag-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-atari-asteroids.jpg
-- name: old-granary-field-oldhouse-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-clean-view.jpg
-- name: liberty-back-statue-liberty-back.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back.jpg
-- name: subway-subway-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-emily-carr.jpg
-- name: legal-statue-legalstatue-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-kand-two.jpg
-- name: gypsymosaic-gypsy-eyes-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-dark-soul.jpg
-- name: border-crossing-bordercrossing-alberto-giacometti.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-alberto-giacometti.png
-- name: aws-s3-square-66-189-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-66-189-800-500-0-max-0--1--1.jpg
-- name: curtain-curtain-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-gan-vogh.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-neo-instinct.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-neo-instinct.png
-- name: amusement-park-amusement-park-2-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-hot-spicy.jpg
-- name: liberty-back-statue-liberty-back-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-creativity.jpg
-- name: losangelescloudyday-los-angeles-downtown-close-up.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/losangelescloudyday-los-angeles-downtown-close-up.jpg
-- name: bordercrossing-bordercrossing-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-alien-goggles.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-crabapple.jpg
-- name: oldbarn-oldbarn-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-marcel-duchamp.jpg
-- name: beach-rocks-beach-rocks-currents-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-colored-circuits.jpg
-- name: mosaic-face-mosaic-face-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-creativity.jpg
-- name: curtain-curtain-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-aqua.jpg
-- name: rain-princess-IMG_4833.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_4833.jpg
-- name: braceros-domingo-ulloa-train-coming-up-tracks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-train-coming-up-tracks.jpg
-- name: adam-smith-adam-smith-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-blue-circuit-5.jpg
-- name: supreme-court-supremecourt-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-mucha-mult.jpg
-- name: aws-s3-mountainlake-mountainlake-still-600.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-mountainlake-mountainlake-still-600.jpg
-- name: gears-4882162452-fa3126b38d-b-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-colorful-blocks.jpg
-- name: rain-princess-castle-window_35928999923_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-castle-window_35928999923_o.jpg
-- name: statue-of-liberty-front-view-statueofliberty-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-ww2-dresden.jpg
-- name: mistywoods-babyfoot-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-atari-missle.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-attack-planes.jpg
-- name: mistywoods-babyfoot-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-dali-three.jpg
-- name: carry-load-carryload-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-bright-sand.jpg
-- name: stalin-time-border-watching-cars.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-border-watching-cars.jpg
-- name: store-on-corner-store-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-alien-goggles.jpg
+- name: braceros-domingo-ulloa-dragon-desert-looking.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-dragon-desert-looking.jpg
+- name: old-school-house-old-schoolhouse-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-crabapple.jpg
+- name: legal-statue-legalstatue-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-monet-one.jpg
+- name: nazi-invasion-subway-brooklyn-station.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-subway-brooklyn-station.jpg
+- name: white-house-lawn-white-house-window-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-light-dali.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-circuit-4.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-copper-circuit.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-copper-circuit.JPG
+- name: bluelake-neo-instinct-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-neo-instinct-file-00-01-17-38.jpg
+- name: oldtrain-oldtrain-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-blue-brush.jpg
+- name: bf-skinner-going-to-dowtown-los-angeles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-going-to-dowtown-los-angeles.jpg
+- name: cargo-ship-cargo-ship-on-sea-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-post-modern.jpg
+- name: rain-princess-IMG_8293.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_8293.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-alberto-giacometti.jpg
+- name: berlinwall-DSC-0084-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-far-away.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-propaganda-leaflets.jpg
+- name: machine-road-machine-road-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-dali-two.jpg
+- name: gears-4882162452-fa3126b38d-b-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-gred-mash.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-blue-circuit-4.jpg
+- name: stalin-time-working-on-railroad-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-working-on-railroad-2.jpg
+- name: sand-hand-sand-hand-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-jap-dys-1.jpg
+- name: old-granary-field-oldhouse-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-dali-two.jpg
+- name: razorwire-DSC-0080-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-atari-asteroids.jpg
+- name: old-barn-old-barn-1500-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-yellow-collage.jpg
+- name: abe-lincoln-one-pablo-blue-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-pablo-blue-file-00-00-07-91.jpg
+- name: containership-containership-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-wols.jpg
+- name: old-church-oldchurch-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-diego-rivera1.jpg
+- name: stalin-time-walking-water-front-sun.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-walking-water-front-sun.jpg
+- name: old-granary-field-granaryfield-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-blue-brush.jpg
+- name: gypsy-wagon-gypsywagon-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-dark-rain.jpg
+- name: ellis-island-ellis-island-room-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-spagetti-accident.jpg
+- name: bf-skinner-nyc-streets-laundromat.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-nyc-streets-laundromat.jpg
+- name: rockingchair-rockingchair-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-internet-numbers.jpg
+- name: aws-s3-stories-new-42-16-600-500-0-max-1-1-2-0.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-42-16-600-500-0-max-1-1-2-0.jpg
+- name: blossombar-creativity-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-creativity-file-00-00-24-99.jpg
+- name: copper-circuit-pigeon_35927783393_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-pigeon_35927783393_o.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-blue-circuit-3.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-blue-circuit-3.png
+- name: castle-on-hill-castle-on-hill-edinburgh-sand-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-sand-paper.JPG
+- name: old-gas-pumps-oldgaspumps-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-crunch-paper.jpg
+- name: aws-s3-square-97-193-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-97-193-800-500-0-max-0-1--1.jpg
+- name: supreme-court-supremecourt-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-atari-missle.jpg
+- name: status-berlin-status-berlin-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-marcel-duchamp.jpg
+- name: carry-load-carryload-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-graham-sutherland.jpg
+- name: adam-smith-adam-smith-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-monet-one.jpg
+- name: border-fence-border-fence-on-hill-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-umberto-bocc.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-diego-rivera1.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-diego-rivera1.JPG
+- name: supreme-court-supremecourt-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-crunch-paper.jpg
+- name: beach-rocks-beach-rocks-currents-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-matrix.jpg
+- name: store-on-corner-oldcabin-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-really-hot.jpg
+- name: store-on-corner-oldcabin-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-gred-mash.jpg
+- name: old-school-house-old-schoolhouse-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-blue-granite.jpg
+- name: oldhouse-oldhouse-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-sand-paper.jpg
 ---
 Maryland Bill Would Ban Family Serving As Campaign Treasurer.&nbsp;New Subdivisions In Seguin.&nbsp;Trump's Plan To Curb Teen Vaping Exempts Some Flavors.&nbsp;Braggs Man To 'cross Walk' Coast To Coast.&nbsp;The Ten Greatest Miami Sports Moments Of The Past Decade.&nbsp;Seems We Are Abundantly Blessed With Cotton Candy Sunsets.&nbsp;Backlog Of Toxic Superfund Cleanups Grows Under Trump.&nbsp;Winners Named In Annual Blethen Awards.&nbsp;
